@@ -3,6 +3,7 @@
 == Changelog ==
 
 = trunk =
+* BUGFIX Testimonials Widget edit page doesn't display custom taxonomies
 
 = 2.12.8 =
 * Add filter `testimonials_widget_cite_html` to adjust cite contents - Thank you [Dimitrios](http://visualweb.gr/) for the suggestion
